--- a/ch02/ch02_04.ipynb
+++ b/ch02/ch02_04.ipynb
@@ -85,9 +85,12 @@
         "import pandas as pd\n",
         "\n",
         "train = pd.read_csv('../kaggle/train.csv')\n",
-        "train = pd.read_csv('../input/titanic/train.csv')\n",
-        "test = pd.read_csv('../input/titanic/test.csv')\n",
-        "gender_submission = pd.read_csv('../input/titanic/gender_submission.csv')\n",
+        "test = pd.read_csv('../kaggle/test.csv')\n",
+        "gender_submission = pd.read_csv('../kaggle/gender_submission.csv')\n",
+        "\n",
+        "#train = pd.read_csv('../input/titanic/train.csv')\n",
+        "#test = pd.read_csv('../input/titanic/test.csv')\n",
+        "#gender_submission = pd.read_csv('../input/titanic/gender_submission.csv')\n",
         "\n",
         "data = pd.concat([train, test], sort=False)\n",
         "\n",
