--- a/ch02/ch02_04.ipynb
+++ b/ch02/ch02_04.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Jessfamily/test/blob/main/ch02/ch02_04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "_cell_guid": "e12020f7-4f94-4ecc-9007-9b7a6e7458a6",
         "_uuid": "1fecb0980d8d422ec0f005c4bfd6225385c2c60f",
         "id": "4HivGIZYUV4_"
@@ -90,11 +100,11 @@
         "!pwd"
       ],
       "metadata": {
-        "id": "cApIi1q-WSov",
-        "outputId": "6b2fbdad-c4a4-458b-a906-f4f57df935d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cApIi1q-WSov",
+        "outputId": "6b2fbdad-c4a4-458b-a906-f4f57df935d9"
       },
       "execution_count": 6,
       "outputs": [
@@ -2902,7 +2912,8 @@
     "pygments_lexer": "ipython3",
     "version": 3,
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
